optimizing the schema -> vertex -> partition/property part of Sqlg startup